# 3D_Engine

./: .gitignore  CMakeLists.txt  build.bat  run.bat
includes/Camera/: Camera.hpp
includes/Core/: Dirty.hpp  FPSCounter.hpp  Renderable.hpp  Window.hpp
includes/Core/OpenGL/: ElementBuffer.hpp  Shader.hpp  UniformBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
includes/Engine/Basic/: Color.hpp  Dirty.hpp  FPSCounter.hpp
includes/Engine/Camera/: Camera.hpp
includes/Engine/Core/: Dirty.hpp  Renderable.hpp
includes/Engine/Error/: EngineError.hpp
includes/Engine/Lights/: Ligth.hpp
includes/Engine/Material/: Material.hpp
includes/Engine/Object3D/: BasicObject.hpp  Camera.hpp  Face.hpp  Geometry.hpp  Group.hpp  Object3D.hpp  Point.hpp
includes/Engine/Object3D/SimpleObject/: Cube.hpp
includes/Engine/Renderer/: MinimalRrenderer.hpp  Renderer.hpp
includes/Object3D/: BasicObject.hpp  Face.hpp  Group.hpp  Object3D.hpp
includes/Renderer/: MinimalRrenderer.hpp  Renderer.hpp
libs/OpenGL/include/glad/: glad.h
libs/OpenGL/src/: glad.c
src/: main.cpp
src/Core/: FPSCounter.cpp
src/Core/OpenGL/: ElementBuffer.cpp  Shader.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Engine/Basic/: Color.cpp  Dirty.cpp  FPSCounter.cpp  Window.cpp
src/Engine/Camera/: Camera.cpp
src/Engine/Core/: Color.cpp  Dirty.cpp  FPSCounter.cpp  Window.cpp
src/Engine/Core/Error/: EngineError.cpp
src/Engine/Error/: EngineError.cpp
src/Engine/Material/: Material.cpp
src/Engine/Object3D/: BasicObject.cpp  Camera.cpp  Face.cpp  Geometry.cpp  Group.cpp  Object3D.cpp
src/Engine/Object3D/Sample/: Cube.cpp
src/Engine/Object3D/SimpleObject/: Cube.cpp
src/Engine/Renderer/: MinimalRenderer.cpp  Renderer.cpp
src/Engine/Shaders/: MinimalShader.frag  MinimalShader.vert
src/Material/: Material.cpp
src/Object3D/: Face.cpp  Geometry.cpp  Group.cpp  Object3D.cpp  Point.cpp
src/Renderer/: MinimalRenderer.cpp  Renderer.cpp
